security/network-policies/vote/allow-external-to-result.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-result
  namespace: vote

spec:
  podSelector:
    matchLabels:
      app: result

  policyTypes:
  - Ingress

  ingress:
  - ports:
    - protocol: TCP
      port: 80
