security/network-policies/vote/allow-gateway-result.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-gateway-result
  namespace: vote

spec:
  podSelector:
    matchLabels:
      app: result

  policyTypes:
  - Ingress

  ingress:
  - ports:
    - protocol: TCP
      port: 8080
